crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__permits_multiple_underscores_between_floating_point_digits.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
1e2__3 1.2__3 1__2.0 1__2e3 0x1.f__ep1 0x1p1__2 0x1__2p0 0x1__2.8p0

syntax:
syntax:
CompilationUnit
  CompilationUnitItemList
    BogusCompilationUnitItem
      FloatingPointLiteral "1e2__3" @ 0..6 trailing=[Whitespace " "]
      FloatingPointLiteral "1.2__3" @ 7..13 trailing=[Whitespace " "]
      FloatingPointLiteral "1__2.0" @ 14..20 trailing=[Whitespace " "]
      FloatingPointLiteral "1__2e3" @ 21..27 trailing=[Whitespace " "]
      FloatingPointLiteral "0x1.f__ep1" @ 28..38 trailing=[Whitespace " "]
      FloatingPointLiteral "0x1p1__2" @ 39..47 trailing=[Whitespace " "]
      FloatingPointLiteral "0x1__2p0" @ 48..56 trailing=[Whitespace " "]
      FloatingPointLiteral "0x1__2.8p0" @ 57..67
  Eof "" @ 67..67

diagnostics:
  code=java.parse.unexpected_syntax severity=Error stage=Parser range=0..6 message="unexpected token at top level"

diagnostics:
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(0), end: TextSize(6) }) message=unexpected token at top level
