crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__permits_nonzero_floating_point_literals_that_round_to_subnormal.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
1e-45f 2.5e-324

syntax:
syntax:
CompilationUnit
  ErrorNode
    FloatingPointLiteral "1e-45f" @ 0..6 trailing=[Whitespace " "]
    FloatingPointLiteral "2.5e-324" @ 7..15
  Eof "" @ 15..15

diagnostics:
  code=java.parse.unexpected_syntax severity=Error stage=Parser range=0..6 message="unexpected token at top level"

diagnostics:
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(0), end: TextSize(6) }) message=unexpected token at top level
