crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__permits_unescaped_double_quotes_inside_text_blocks.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
"""
"Bob"
"""

syntax:
syntax:
CompilationUnit
  ImportDeclarationList
  CompilationUnitDeclarationList
    BogusTypeDeclaration
      TextBlockLiteral "\"\"\"\n\"Bob\"\n\"\"\"" @ 0..13
  Eof "" @ 13..13

diagnostics:
  code=java.parse.unexpected_syntax severity=Error stage=Parser range=0..13 message="unexpected token at top level"

diagnostics:
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(0), end: TextSize(13) }) message=unexpected token at top level
