crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__raw_backslash_without_lowercase_u_is_not_a_unicode_escape.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
\x \U0061

syntax:
syntax:
CompilationUnit
  ErrorNode
    Unknown "\\" @ 0..1
    Identifier "x" @ 1..2 trailing=[Whitespace " "]
    Unknown "\\" @ 3..4
    Identifier "U0061" @ 4..9
  Eof "" @ 9..9

diagnostics:
  code=java.lex.unknown_character severity=Error stage=Lexer range=0..1 message="unknown character"
  code=java.lex.unknown_character severity=Error stage=Lexer range=3..4 message="unknown character"
  code=java.parse.unexpected_syntax severity=Error stage=Parser range=0..1 message="unexpected token at top level"

diagnostics:
code=java.lex.unknown_character severity=Error stage=Lexer range=Some(TextRange { start: TextSize(0), end: TextSize(1) }) message=unknown character
code=java.lex.unknown_character severity=Error stage=Lexer range=Some(TextRange { start: TextSize(3), end: TextSize(4) }) message=unknown character
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(0), end: TextSize(1) }) message=unexpected token at top level
